[package]
name = "hyper_x_cloud_ii_core_wireless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
hidapi = "2.3.3"
num_enum = "0.7.3"
thistermination = "1.0.0"
[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2.0"
rusb = "0.9"
